# Win32CppTemplate

./: .clang-format  .clangd  CMakeLists.txt  README.md
includes/: main.h
src/: main.cpp
